--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,23 +1,18 @@
-@media (max-width: 800px) {
-  .bilberry-hugo-theme header .container {
-    width: fit-content;
-    padding: 2em;
-    /* box-sizing: border-box; */
-  }
-}
-
 .qr-footer {
   align-items: center;
   gap: 2em;
 }
 
-.bilberry-hugo-theme a{
-  word-wrap: break-word;
+.bilberry-hugo-theme article .content h1 a {
+  text-decoration-style: none !important;
+}
+
+.bilberry-hugo-theme article .content a {
   text-decoration: underline;
 }
 
-.bilberry-hugo-theme footer .container div.scan-tip {
-  color: darkgray;
+.bilberry-hugo-theme footer .container .scan-tip {
+  color: #858585;
   font-size: 1.2em;
   margin: 0 !important;
 }
