--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -4,11 +4,12 @@
 }
 
 .bilberry-hugo-theme article .content h1 a {
-  text-decoration-style: none !important;
+  text-decoration: none !important;
 }
 
 .bilberry-hugo-theme article .content a {
   text-decoration: underline;
+  word-wrap: break-word;
 }
 
 .bilberry-hugo-theme footer .container .scan-tip {
